# shutdown_hooks_rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
