[package]
name = "shutdown_hooks"
version = "0.0.3"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "Being tested, please do not use until 0.1.0"

repository = "https://github.com/Techern/shutdown_hooks_rs"

readme = "README.md"

keywords = ["ffi", "shutdown", "stdlib", "std"]

license = "MIT"
