[package]
name = "shutdown_hooks"
version = "0.1.0"
authors = ["Cruz Julian Bishop <cruzjbishop@gmail.com>"]

description = "Shutdown hooks for Rust. Currently a friendly wrapper around atexit, will eventually allow you to remove hooks"

repository = "https://github.com/Techern/shutdown_hooks_rs"

readme = "README.md"

keywords = ["ffi", "shutdown", "stdlib", "std"]

license = "MIT OR Apache-2.0"
